--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,1 @@
-*.tres
-*onetoc2
-*.md5
-*.stex
-*.dll
-*.pdb
-*.xml
-*.cfg
-*.editor
-*.editor_player
-*.cache
-*.props
-*.targets
-.mono/metadata/ide_messaging_meta.txt
+*.onetoc2
